0.4.2 ()
=====
* Added Avutil.Video.frame_pts

0.4.1 (2019-09-26)
=====
* Added Avutil.Audio.frame_get_sample_format.

0.4.0 (09-22-2019)
=====
* Added support for stream output.
* Updated stream and container creation API to be able to use any arbitrary FFmpeg parameter.

0.3.0 (08-22-2019)
=====
* Implement support for streams
* Cleanup internal logic
* Fix build on bytecode architecture (#27)

0.2.1 (11-12-2018)
=====
* Fix dist.

0.2.0 (09-09-2018)
=====
* Add support for demuxing and resampling (#2).
* Add audio and video encoding.
* Add avdevice.
* Add codec parameters structure.

0.1.2 (05-23-2016)
=====
* Compatibility with the latest ffmpeg.

0.1.1 (03-08-2015)
=====
* Dummy github release

0.1.0 (18-02-2013)
=====
* Initial release.